# campaign-chat

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/models/: api_models.py
backend/services/: campaign_generator.py
frontend/: .env.example  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: CampaignDisplay.tsx  ChatContainer.tsx  DataSourcePanel.tsx  MessageBubble.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
